# mdviewy

./: .gitignore  .gitleaks.toml  .yarnrc.yml  AGENTS.md  ATTRIBUTIONS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README.src.md  README_CN.md  README_JA.md  SECURITY.md  community-themes.json  justfile  osv-scanner.toml  package.json  tsconfig.base.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  dependabot-auto.yml  nodejs.yml  nrg.yml  tauri-release.yml  test-bundle.yml  test-ci.yml  translate-check.yml
apps/desktop/: UPDATE_LOG.md  index.html  package.json  vite.config.ts
apps/desktop/src/: App.startup-boundary.test.ts  App.tsx  AppThemeProvider.lazy-boundary.test.ts  AppThemeProvider.tsx  errorReporting.ts  global.d.ts  globalStyles.test.ts  globalStyles.ts  main.tsx  remixicon-subset.css  startup-dependency-boundary.test.ts  updater-disabled.test.ts  vite-startup-chunking.test.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main-capability.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: core_cmd.rs  fc.rs  font.rs  lib.rs  main.rs  menu.rs  search.rs  setup.rs
apps/desktop/src/components/: AppErrorBoundary.tsx  fill-flex-parent.tsx  startup-ui-boundary.test.ts
apps/desktop/src/constants/: index.ts  rightBar.ts
apps/desktop/src/context/: index.ts  theme.ts
apps/desktop/src/helper/: documentFocus.test.ts  documentFocus.ts  fileTypeHandler.ts  files.registry.test.ts  files.ts  filesys.readDirectory.test.ts  filesys.ts  markdownInsights.test.ts  markdownInsights.ts  openedPaths.test.ts  openedPaths.ts  printDocument.test.ts  printDocument.ts  smartActions.test.ts  smartActions.ts  theme.ts  timing.test.ts  timing.ts  wysiwygMarkdownEscapes.test.ts  wysiwygMarkdownEscapes.ts
apps/desktop/src/hooks/: useAppSetup.ts  useCommandInit.ts  useExternalLinks.ts  useOpen.ts
apps/desktop/src/i18n/: index.ts
apps/web/: next.config.js  package.json
apps/web/components/: DocsLayout.tsx  Editor.tsx  Link.tsx  PlaygroundCSRContent.tsx  SeoHead.tsx
apps/web/hooks/: useMockFiles.ts
apps/web/pages/: _app.tsx  index.tsx  playground.tsx  privacy.tsx  releases.tsx
apps/web/public/: manifest.json
apps/web/utils/: githubApi.ts
crates/core/: Cargo.toml
crates/core/src/: frontmatter.rs  fts.rs  lib.rs  render.rs  watcher.rs
crates/download_npm/: Cargo.toml
crates/download_npm/src/: lib.rs
crates/download_npm/tests/: lib.rs
crates/file_search/: Cargo.toml
crates/file_search/src/: fileinfo.rs  manager.rs  rgtools.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
docs/: GAP-ANALYSIS-2026-07-05.md  ROADMAP-1.0.md  SIGNING.md  UI-MAP.md
docs/adr/: 2026-05-26-mdviewy-rename.md  2026-05-26-rename-to-mdmaster.md  2026-05-26-rust-core.md  2026-06-05-canonical-name-and-repo-home.md  2026-06-05-security-posture-1.0.md
docs/assets/: README.md
docs/benchmarks/: 2026-05-26-mdviewy.md
docs/brand/concepts-2026-06/: README.md
docs/en/: intro.md
docs/en/Community/: CONTRIBUTING.md
docs/en/Extension/: CustomTheme.md  UseCopilotWithOllama.md
docs/zh/: intro.md
docs/zh/Community/: CONTRIBUTING.md
docs/zh/Extension/: CustomTheme.md  UseCopilotWithOllama.md
locales/: en.json  es.json  fr-FR.json  ja.json  zh-CN.json
locales/web/en/: common.json
locales/web/ja/: common.json
locales/web/zh/: common.json
scripts/: generate-remixicon-subset.mjs  gitea-push.sh  install-mdviewy-app.sh  prepare-macos-prerelease.sh  translate-check.js
scripts/raycast/: open-mdviewy.sh
tools/cli/: Cargo.toml
tools/cli/src/: lib.rs  main.rs  release.rs  utils.rs
(+113 files in other folders)
