[package]
name = "mfdev"
version = "3.0.0"
edition = "2021"
authors = ["drl990114"]

[dependencies]
toml = "0.8.23"

[dependencies.clap]
version = "4.5.35"
features = [
    "cargo",
    "derive",
]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.117"
features = ["preserve_order"]
